--- a/Video/style.css
+++ b/Video/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: var(--color-backgroud);
+  background-color: var(--color-background);
 }
 
 header {
@@ -46,7 +46,7 @@ nav .logo {
 
 nav #searchbox {
   border-radius: 20px;
-  background-color: var(--color-backgroud);
+  background-color: var(--color-background);
   color: var(--text-color);
   padding: 5px;
   margin: auto;
@@ -119,17 +119,17 @@ nav #searchbox {
 
 #main-page {
   border-left: solid #ff6249 8px;
-  background-color: var(--color-backgroud);
+  background-color: var(--color-background);
 }
 
 :root{
-  --color-backgroud: #f0f2f5;
+  --color-background: #f0f2f5;
   --element-background: #ffffff;
   --text-color: black;
 }
 
 .dark-theme{
-  --color-backgroud: #18191a;
+  --color-background: #18191a;
   --element-background: #242526;
   --text-color: white;
 }
