--- a/Video/style.css
+++ b/Video/style.css
@@ -121,7 +121,71 @@ nav #searchbox {
   border-left: solid #ff6249 8px;
   background-color: var(--color-background);
 }
+/* video container style */
+.videos-container {
+    margin-left: calc(15% + 30px);
+    margin-top: 88px;
+    width: 80%;
+    height: 85%;
+    padding: 10px;
+    position: fixed;
+    border-radius: 15px;
+    color: var(--text-color);
+    background-color: var(--element-background);
+}
 
+.type-container{
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  margin-bottom: 10px;
+  font-size: 20px;
+  background-color: var(--color-background);
+  padding: 5px;
+  border-radius: 15px;
+}
+
+.type-container button {
+  font-size: 25px;
+  height: 30px;
+  width: 30%;
+  border-radius: 15px;
+  border: none;
+}
+
+.type-container button:hover {
+  background-color: var(--element-background);
+}
+
+.type-container button.active {
+  background-color: #ff6249;
+  color: white;
+}
+
+.video{
+  display:flex;
+  justify-content: space-around;
+  justify-content: flex-start;
+  width: 100%;
+  height: 95%;
+  flex-wrap: wrap;
+  overflow: scroll;
+}
+
+.video .video-item {
+  width: 24%;
+  padding: 5;
+  font-size: 20px;
+}
+
+.video .video-item iframe{
+  width: 90%;
+  height: auto;
+  margin: auto;
+}
+
+/* dark mode */
 :root{
   --color-background: #f0f2f5;
   --element-background: #ffffff;
