--- a/style.css
+++ b/style.css
@@ -117,6 +117,11 @@ nav #searchbox {
   display: flex;
 }
 
+.sidebar .account a{
+  color: var(--text-color);
+  text-decoration: none;
+}
+
 #main-page {
   border-left: solid #ff6249 8px;
   background-color: var(--color-background);
