--- a/Voice/style.css
+++ b/Voice/style.css
@@ -65,6 +65,26 @@ nav #searchbox {
   text-transform: uppercase;
   text-align: center;
   background-color: #ff6249;
+  color: var(--light-background);
+  font-weight: bold;
+}
+
+.logout-btn {
+  border-radius: 25px;
+  padding: 5px;
+  height: 70%;
+  width: 30%;
+  margin: auto;
+  margin-left: 10px;
+  text-align: center;
+  background-color: grey;
+  color: white;
+  font-weight: bold;
+}
+
+.logout-btn:hover{
+  background-color: #ff6249;
+  color: white;
 }
 
 .post-button:hover{
@@ -117,9 +137,18 @@ nav #searchbox {
   display: flex;
 }
 
-.sidebar .account a{
+.sidebar .account img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+}
+
+.sidebar .account a,.account_name{
+  font-size: 25px;
   color: var(--text-color);
   text-decoration: none;
+  margin: auto;
+  text-transform: capitalize;
 }
 
 #main-page {
